[metadata]
# https://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files
name = flake8_import_linter
version = 0.1.5
description = Flake8 plugin that checks for forbidden imports in your code

[options]
py_modules = flake8_import_linter

[options.entry_points]
flake8.extension =
    IMP=flake8_import_linter:Plugin
